# zotero-summarizer

./: .env.example  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: publish.yml
zotero_summarizer/: __init__.py  cli.py  config.py  graph.py  pdf_utils.py  summarizer.py  zotero_client.py
