[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "zotery"
version = "0.0.3"
description = "Scan a Zotero collection, summarize each paper's PDF, and write the summary back as a note (LangGraph + DeepSeek)."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Mustafa Assaf", email = "must.saf@gmail.com" },
]
keywords = ["zotero", "summarization", "langgraph", "pdf", "llm", "research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: General",
]
dependencies = [
    "pyzotero>=1.5.18",
    "pypdf>=4.2",
    "langgraph>=0.2.40",
    "langchain-core>=0.3.0",
    "langchain-deepseek>=0.1.2",
    "langchain-openai>=0.2.0",
    "langchain-ollama>=0.3.3",
    "langchain-google-genai>=2.0.0",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/mkassaf/zotero-summarizer"
Repository = "https://github.com/mkassaf/zotero-summarizer"
Issues = "https://github.com/mkassaf/zotero-summarizer/issues"

[project.scripts]
zotery = "zotero_summarizer.cli:main"

[tool.setuptools]
packages = ["zotero_summarizer"]
